Services section updated, folder structure refactored

--- a/client/src/components/flip.css
+++ b/client/src/components/flip.css
@@ -20,26 +20,33 @@
   left: 0;
 }
 
-.cardButton{
+.cardButton {
   height: 3rem;
   width: 3rem;
   color: white;
 }
 
+#slash {
+  font-size: 1rem;
+}
+
 @media screen and (max-width: 950px) {
   .container {
-    font-size: .9rem;
+    font-size: 0.9rem;
+  }
+  #slash {
+    font-size: 1.1rem;
   }
 }
 
 @media screen and (max-width: 890px) {
   .container {
-    font-size: .7rem;
+    font-size: 0.7rem;
   }
 }
 
 @media screen and (max-width: 800px) {
   .container {
-    font-size: .65rem;
+    font-size: 0.65rem;
   }
 }
