--- a/client/src/components/style.module.css
+++ b/client/src/components/style.module.css
@@ -389,9 +389,9 @@
   font-weight: 400;
 }
 
-.cardIdel{
+.cardIdel {
   width: 90%;
-  border-radius:  0 0 20px 20px;
+  border-radius: 0 0 20px 20px;
 }
 
 .cardBottomContainer {
@@ -400,14 +400,14 @@
 
 .cardButtonContainer {
   padding: 1rem;
-  margin: .5rem;
+  margin: 0.5rem;
   background-color: #1f1f1f;
   color: white;
   border-radius: 50%;
   transition: ease-in-out 0.5s;
 }
 
-.cardButtonContainer:hover{
+.cardButtonContainer:hover {
   background-color: #2f9070;
   cursor: pointer;
 }
@@ -520,46 +520,6 @@
 .navButton {
   border: none;
   border-radius: 50%;
-}
-
-.caseStudyContainer {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  height: auto;
-  width: 95%;
-  margin: 1rem auto;
-  border-radius: 20px;
-}
-
-.caseStudyNumber {
-  font-size: 5rem;
-  font-weight: bolder;
-  color: transparent;
-  -webkit-text-stroke: 2px;
-  -webkit-text-fill-color: transparent;
-  transform: rotate(270deg);
-  display: inline-block;
-  background: linear-gradient(90deg, #343f3c, #2ebf91);
-  -webkit-background-clip: text;
-  background-clip: text;
-  border-radius: 8px;
-}
-
-.caseStudyGrid {
-  display: grid;
-  grid-template-columns: 30% 70%;
-  align-items: start;
-  align-content: stretch;
-  justify-content: center;
-  justify-items: center;
-}
-
-.caseStudyButton {
-  width: max-content;
-  max-width: fit-content;
-  padding: 0 1rem;
-  transition: all 0.5s;
 }
 
 .footerText {
