--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,16 +11,21 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1 {
   font-family: "Alice", serif;
 }
 
+h2,
+p {
+  font-family: "Montserrat", sans-serif;
+}
+
 a {
-  color: #343F3C;
+  color: #343f3c;
 }
 
 .alice {
