--- a/client/src/pages/CaseStudy/style.module.css
+++ b/client/src/pages/CaseStudy/style.module.css
@@ -21,18 +21,24 @@
 }
 
 .headingSectionImg {
-  height: 40em;
-  width: 40em;
+  height: 40dvw;
+  width: 40dvw;
   border-radius: 10px;
 }
 
 .heading {
   font-size: 5rem;
-  padding-left: 50px;
+  padding-left: 1em;
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
-  color: #2ebf91;
-  margin: 0;
+}
+
+.heading del {
+  background-image: linear-gradient(to right, #1a4538 0%, #2dbb8e 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  text-decoration: none;
 }
 
 .caseStudySection {
@@ -89,16 +95,38 @@
 
 @media (max-width: 1200px) and (min-width: 768px) {
   .heading {
-    font-size: 1.7rem;
+    font-size: 4rem;
   }
   .caseStudy {
     grid-template-columns: 1fr;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1110px) {
   .heading {
-    font-size: 1.5rem;
+    padding-left: 0.5em;
+  }
+}
+
+@media (width: 768px) {
+  .heading {
+    padding-left: 0;
+    padding-top: 2em;
+  }
+}
+
+@media (max-width: 768px) {
+  .headingSection {
+    grid-template-columns: 1fr;
+    align-items: end;
+    justify-items: center;
+  }
+  .heading {
+    font-size: 3em;
+  }
+  .headingSectionImg {
+    height: 80%;
+    width: 80%;
   }
   .caseStudySection {
     padding: 1rem;
@@ -113,7 +141,7 @@
 
 @media (max-width: 540px) {
   .heading {
-    font-size: 1.5rem;
+    font-size: 2.5em;
   }
   .caseStudy p {
     font-size: large;
@@ -124,8 +152,11 @@
 }
 
 @media (max-width: 425px) {
+  .caseStudyHeader {
+    height: 80dvh;
+  }
   .heading {
-    font-size: 1rem;
+    font-size: 2em;
   }
   .caseStudy p {
     font-size: medium;
