--- a/client/src/components/style.module.css
+++ b/client/src/components/style.module.css
@@ -527,14 +527,14 @@
 .footerText {
   width: auto;
   padding: 5rem;
-  color: white;
+  color: #1f1f1f;
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
 .footerContainer {
-  background-color: #1f1f1f;
+  background-color: white;
   height: auto;
   width: auto;
   min-height: 50dvh;
@@ -546,7 +546,7 @@
 }
 
 .footerBottomContainer {
-  background-color: #1f1f1f;
+  background-color: white;
   height: 5vh;
   border-radius: 0 0 20px 20px;
   display: grid;
@@ -559,7 +559,7 @@
 }
 
 .footerBottomText {
-  background-color: white;
+  background-color: #f9f9f9;
   margin: 0;
   display: flex;
   justify-content: center;
