--- a/client/src/pages/CaseStudy/style.module.css
+++ b/client/src/pages/CaseStudy/style.module.css
@@ -16,7 +16,7 @@
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  align-items: start;
+  align-items: center;
   justify-items: end;
 }
 
@@ -29,7 +29,7 @@
 .heading {
   font-size: 5rem;
   padding-left: 1em;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Alice", serif;
   font-weight: 500;
 }
 
@@ -48,11 +48,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
   background-color: white;
-  border-radius: 20px;
+  border-radius: 10px;
   color: #343f3c;
-  padding: 2rem;
+  padding: 0 0.2rem;
+  margin: 0 0 1.5rem 0;
 }
 
 .caseStudy {
