--- a/client/src/components/service/style.module.css
+++ b/client/src/components/service/style.module.css
@@ -62,7 +62,9 @@
   line-height: 1.5;
   font-weight: 500;
   font-size: 18px;
-  margin-top: 5dvh;
+  display: grid;
+  gap: 1em;
+  grid-template-rows: 5em 1fr;
 }
 
 .cardButtonContainer {
@@ -88,14 +90,36 @@
   }
   .cardDescription {
     margin-top: 0;
+    gap: 0.5rem;
+    grid-template-rows: auto;
+  }
+  .cardButtonContainer {
+    height: auto;
+    width: auto;
   }
 }
 
 @media (max-width: 350px) {
+  .container {
+    padding: 0.2rem;
+  }
+  .gridContainer {
+    gap: 0.5rem;
+    padding: 0.2rem;
+  }
+  .card {
+    padding: 0.5rem 1rem;
+    min-height: 22rem;
+  }
   .cardTitle {
     font-size: 1rem;
   }
   .cardDescription {
     font-size: 0.9rem;
+    gap: 0;
+    grid-template-rows: auto auto;
+  }
+  .cardButtonContainer {
+    margin-right: 0;
   }
 }
