--- a/client/src/components/service/style.module.css
+++ b/client/src/components/service/style.module.css
@@ -25,7 +25,7 @@
 .card {
   background: #f9f9f9;
   border-radius: 12px;
-  padding: 1rem 2rem;
+  padding: 1rem;
   min-height: 30rem;
   height: auto;
   transition: transform 0.3s ease;
@@ -39,8 +39,8 @@
 }
 
 .cardImage {
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
 }
 
 .cardTitle {
@@ -58,10 +58,10 @@
 }
 
 .cardDescription {
-  font-size: 1rem;
+  margin-top: 3dvh;
   line-height: 1.5;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 1.4rem;
   display: grid;
   gap: 1em;
   grid-template-rows: 5em 1fr;
@@ -69,7 +69,7 @@
 
 .cardButtonContainer {
   align-self: flex-end;
-  margin-right: -1.2rem;
+  margin-right: -0.7rem;
   width: 1rem;
   height: 1rem;
   padding: 1rem;
@@ -118,8 +118,5 @@
     font-size: 0.9rem;
     gap: 0;
     grid-template-rows: auto auto;
-  }
-  .cardButtonContainer {
-    margin-right: 0;
   }
 }
