--- a/client/src/pages/CaseStudy/style.module.css
+++ b/client/src/pages/CaseStudy/style.module.css
@@ -29,7 +29,7 @@
 .heading {
   font-size: 5rem;
   padding-left: 1em;
-  font-family: "Alice", serif;
+  font-family: var(--heading);
   font-weight: 500;
 }
 
