--- a/client/src/pages/Error/style.module.css
+++ b/client/src/pages/Error/style.module.css
@@ -31,7 +31,7 @@
 
 .button {
   font-size: large;
-  font-family: "Montserrat", sans-serif;
+  font-family: var(--body);
   font-weight: 500;
   padding: 0.5rem 1rem;
   background-color: #2a2a2a;
